# react-native-keychain

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .flowconfig  .gitignore  .markdownlint.json  .npmignore  .npmrc  .prettierrc  .travis.yml  .yarnrc.yml  AGENTS.md  README.md  RNKeychain.podspec  build.gradle.kts  gradle.properties  index.android.js  index.ios.js  index.js  mise.toml  package-lock.json  package.json  react-native.config.js  settings.gradle.kts  test_index.js  tsconfig.build.json  tsconfig.docs.json  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: deploy.yaml  docs.yaml  e2e_tests.yaml  gradle_build.yaml  lint_and_types.yaml  tests.yaml
.yarn/patches/: react-native-test-app-npm-4.2.1-866b46545f.patch
Enums/: Accessibility.js  AuthenticationTypes.js  KeyClasses.js  KeyTypes.js  MatchLimits.js  Protocols.js  index.js
KeychainExample/: .detoxrc.js  .flowconfig  .gitignore  .tool-versions  App.js  App.tsx  App.tsxv  Gemfile  README.md  app.js  app.json  babel.config.js  index.ios.js  index.js  package-lock.json  package.json  postinstall_cleanup.sh  react-native.config.js  tsconfig.json  tt.tsx
KeychainExample/KeychainExample.xcodeproj/: project.pbxproj
KeychainExample/KeychainExample.xcodeproj/xcshareddata/xcschemes/: KeychainExample.xcscheme
KeychainExample/KeychainExampleTests/: KeychainExampleTests.m
KeychainExample/android/: build.gradle  gradle.properties  settings.gradle
KeychainExample/android/app/: BUCK  _BUCK  build.gradle
KeychainExample/android/gradle/wrapper/: gradle-wrapper.properties
KeychainExample/android/keystores/: .gitignore  create_local_release_flavor_key.sh  debug.keystore  release.keystore.properties
KeychainExample/e2e/: jest.config.js  setup.ts
KeychainExample/e2e/testCases/: accessControlTest.spec.js  acessControlTest.spec.js  biometricsAccessControlTest.spec.js  fingerprintTest.spec.js  knoxTest.spec.js  noneAccessControTest.spec.js  securityLevelTest.spec.js  storageTypesTest.spec.js
KeychainExample/e2e/utils/: authHelpers.js  authHelpers.ts  detoxHelpers.ts  enrollBiometrics.ts  enrollFingerprintAndroid.sh  matchLoadInfo.ts  statusMessageHelpers.ts
KeychainExample/iOS/: AppDelegate.m
KeychainExample/ios/: Podfile
KeychainExample/ios/KeychainExample/: AppDelegate.m  AppDelegate.mm  Info.plist  KeychainExample.entitlements  LaunchScreen.storyboard
KeychainExample/ios/KeychainExample.xcodeproj/: project.pbxproj
KeychainExample/ios/KeychainExample/Base.lproj/: LaunchScreen.xib
KeychainExample/ios/KeychainExampleTests/: KeychainExampleTests.m
KeychainExample/macos/: Podfile
KeychainExample/macos/KeychainExample-macOS/: ViewController.m
KeychainExample/macos/KeychainExample-macOS/Base.lproj/: Main.storyboard
KeychainExample/macos/KeychainExample.xcodeproj/: project.pbxproj
KeychainExample/macos/KeychainExample.xcworkspace/: contents.xcworkspacedata
KeychainExample/src/: App.tsx
RNKeychain.xcodeproj/: project.pbxproj
RNKeychainManager/: RNKeychainAuthenticationListener.h  RNKeychainManager.h  RNKeychainManager.m
android/: README.md  build.gradle  gradle.properties  react-native-helpers.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/libs/: biometric.aar
android/src/main/: AndroidManifest.xml
biometric/: JH-Readm.md  build.gradle
biometric/src/main/: AndroidManifest.xml
desktop/: CMakeLists.txt  rnkeychainmanager.cpp  rnkeychainmanager.h
example/: App.tsx  app.json  babel.config.js  metro.config.js  package.json  react-native.config.js
example/ios/: .xcode.env
gradle/wrapper/: gradle-wrapper.properties
ios/RNKeychainManager/: RNKeychainManager.h  RNKeychainManager.m  RNKeychainManager.mm
lib/commonjs/: enums.js  enums.js.map  index.js  index.js.map  normalizeOptions.js  normalizeOptions.js.map
lib/module/: enums.js  enums.js.map  index.js  index.js.map  normalizeOptions.js  normalizeOptions.js.map
lib/typescript/: enums.d.ts  enums.d.ts.map  index.d.ts  index.d.ts.map  normalizeOptions.d.ts  normalizeOptions.d.ts.map  types.d.ts  types.d.ts.map
src/: KeychainError.ts  NativeKeychainManager.ts  enums.ts  index.ts  normalizeOptions.ts  react-native-keychain.d.ts  types.ts
typings/: react-native-keychain.d.ts
website/: docusaurus.config.ts  package.json  sidebars.ts  versions.json
website/docs/: choosing-storage-type.md  data-persistence.md  faq.md  knox-integration.md  platform-value-storage.md  secure-hardware-vs-software.md  usage.md
website/docs/api/: typedoc-sidebar.cjs
website/docs/api/enumerations/: ACCESSIBLE.md  ACCESS_CONTROL.md  AUTHENTICATION_TYPE.md  BIOMETRY_TYPE.md  SECURITY_LEVEL.md  SECURITY_RULES.md  STORAGE_TYPE.md
website/docs/api/functions/: canImplyAuthentication.md  getAllGenericPasswordServices.md  getGenericPassword.md  getInternetCredentials.md  getSecurityLevel.md  getSupportedBiometryType.md  hasGenericPassword.md  hasInternetCredentials.md  requestSharedWebCredentials.md  resetGenericPassword.md  resetInternetCredentials.md  setGenericPassword.md  setInternetCredentials.md  setSharedWebCredentials.md
website/docs/api/type-aliases/: AuthenticationPrompt.md  BaseOptions.md  NormalizedOptions.md  Options.md  Result.md  SharedWebCredentials.md  UserCredentials.md
website/src/pages/: index.tsx
website/versioned_docs/version-9.0.0/: index.md  jest.md  usage.md
website/versioned_docs/version-9.0.x/api/: index.md
website/versioned_docs/version-9.1.0/api/: index.md
website/versioned_docs/version-9.2.x/: choosing-storage-type.md  faq.md  usage.md
website/versioned_sidebars/: version-9.0.x-sidebars.json  version-9.1.0-sidebars.json  version-9.2.x-sidebars.json
(+220 files in other folders)
